完走しました

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/mixin.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <!-- <link
+      rel="preload"
+      href="css/style.css"
+      onload="this.onload=null; this.rel='stylesheet'"
+    />
+    <noscript>
+      <link rel="stylesheet" href="css/style.css" />
+    </noscript>
+    <script src="js/preload-b04-minifiered.js"></script> -->
     <link rel="stylesheet" href="css/slick.css" />
     <link rel="stylesheet" href="css/slick-theme.css" />
     <script src="js/jquery-3.3.1.min.js" defer></script>
